Fixed visual bug with map creating empty white space

--- a/src/App.scss
+++ b/src/App.scss
@@ -126,7 +126,7 @@ body {
  border-radius: 20;
 }
 .cbinput{
-  width: 400px;
+  width: 500px;
   height: 45px;
   font-size: medium;
   border: 0;
